test_suite/error.slice_out_of_bounds.sugar.jsonlang.golden
RUNTIME ERROR: Array bounds error: 6 not within [0, 6)
	std.jsonlang:92:46-58	thunk <array_element>
	During manifestation	
