test_suite/error.import_folder.jsonlang.golden_regex
(STATIC ERROR: lib:1:1: Unexpected end of file.|RUNTIME ERROR: Couldn't open import "lib": basic_filebuf::underflow error reading the file(: iostream error)?
	error.import_folder.jsonlang:17:1-12	)
